--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,14 @@ theme = "hugo-theme-basic"
 baseURL = "https://www.example.com/"
 languageCode = "en-US"
 title = "Hugo Generator"
+googleAnalytics = "UA-146816445-1"
+
+[privacy]
+  [privacy.googleAnalytics]
+    anonymizeIP = true
+    respectDoNotTrack = true
+    useSessionStorage = true
+  [privacy.twitter]
+    enableDNT = true
+  [privacy.youtube]
+    privacyEnhanced = true
