--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,10 @@ title = "Hugo Generator"
 googleAnalytics = "UA-146816445-1"
 enableRobotsTXT = true
 canonifyURLs = true
-author = "Jonah Polack"
-description = "Hugo is a static site generator. Hugo generator is a UI that generates a hugo project for you"
+
+[params]
+  author = "Jonah Polack"
+  description = "Hugo is a static site generator. Hugo generator is a UI that generates a hugo project for you"
 
 [privacy]
   [privacy.googleAnalytics]
